--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 		    						<div class="overlay"></div>
 			    				</a>
 			    				<div class="text pt-3">
-	    							<p class="meta d-flex"><span class="pr-3">Dessert</span><span class="ml-auto pl-3">March 01, 2018</span></p>
+	    							<p class="meta d-flex"><span class="pr-3">Dessert</span><span class="ml-auto pl-3">June 05, 2020</span></p>
 	    							<h3><a href="single.html">Tasty &amp; Delicious Foods</a></h3>
 	    							<p class="mb-0"><a href="single.html" class="btn-custom">Read More <span class="icon-arrow_forward ml-4"></span></a></p>
 	    						</div>
@@ -125,7 +125,7 @@
 		    						<div class="overlay"></div>
 			    				</a>
 			    				<div class="text pt-3">
-	    							<p class="meta d-flex"><span class="pr-3">Dessert</span><span class="ml-auto pl-3">March 01, 2018</span></p>
+	    							<p class="meta d-flex"><span class="pr-3">Dessert</span><span class="ml-auto pl-3">June 05, 2020</span></p>
 	    							<h3><a href="single.html">Tasty &amp; Delicious Foods from Scotland</a></h3>
 	    							<p class="mb-0"><a href="single.html" class="btn-custom">Read More <span class="icon-arrow_forward ml-4"></span></a></p>
 	    						</div>
@@ -137,7 +137,7 @@
 		    						<div class="overlay"></div>
 			    				</a>
 			    				<div class="text pt-3">
-	    							<p class="meta d-flex"><span class="pr-3">Dessert</span><span class="ml-auto pl-3">March 01, 2018</span></p>
+	    							<p class="meta d-flex"><span class="pr-3">Dessert</span><span class="ml-auto pl-3">June 05, 2020</span></p>
 	    							<h3><a href="single.html">Tasty &amp; Delicious Foods</a></h3>
 	    							<p class="mb-0"><a href="single.html" class="btn-custom">Read More <span class="icon-arrow_forward ml-4"></span></a></p>
 	    						</div>
@@ -149,7 +149,7 @@
 		    						<div class="overlay"></div>
 			    				</a>
 			    				<div class="text pt-3">
-	    							<p class="meta d-flex"><span class="pr-3">Dessert</span><span class="ml-auto pl-3">March 01, 2018</span></p>
+	    							<p class="meta d-flex"><span class="pr-3">Dessert</span><span class="ml-auto pl-3">June 05, 2020</span></p>
 	    							<h3><a href="single.html">Tasty &amp; Delicious Foods</a></h3>
 	    							<p class="mb-0"><a href="single.html" class="btn-custom">Read More <span class="icon-arrow_forward ml-4"></span></a></p>
 	    						</div>
@@ -175,7 +175,7 @@
     						<div class="blog-entry">
 		    					<a href="single.html" class="img-2"><img src="images/blog-1.jpg" class="img-fluid" alt="Colorlib Template"></a>
 			    				<div class="text pt-3">
-	    							<p class="meta d-flex"><span class="pr-3">Dessert</span><span class="ml-auto pl-3">March 01, 2018</span></p>
+	    							<p class="meta d-flex"><span class="pr-3">Dessert</span><span class="ml-auto pl-3">June 05, 2020</span></p>
 	    							<h3><a href="#">Tasty &amp; Delicious Foods</a></h3>
 	    							<p class="mb-0"><a href="single.html" class="btn btn-black py-2">Read More <span class="icon-arrow_forward ml-4"></span></a></p>
 	    						</div>
@@ -185,7 +185,7 @@
     						<div class="blog-entry">
 		    					<a href="single.html" class="img-2"><img src="images/blog-2.jpg" class="img-fluid" alt="Colorlib Template"></a>
 			    				<div class="text pt-3">
-	    							<p class="meta d-flex"><span class="pr-3">Dessert</span><span class="ml-auto pl-3">March 01, 2018</span></p>
+	    							<p class="meta d-flex"><span class="pr-3">Dessert</span><span class="ml-auto pl-3">June 05, 2020</span></p>
 	    							<h3><a href="#">Tasty &amp; Delicious Foods</a></h3>
 	    							<p class="mb-0"><a href="single.html" class="btn btn-black py-2">Read More <span class="icon-arrow_forward ml-4"></span></a></p>
 	    						</div>
@@ -195,7 +195,7 @@
     						<div class="blog-entry">
 		    					<a href="single.html" class="img-2"><img src="images/blog-3.jpg" class="img-fluid" alt="Colorlib Template"></a>
 			    				<div class="text pt-3">
-	    							<p class="meta d-flex"><span class="pr-3">Dessert</span><span class="ml-auto pl-3">March 01, 2018</span></p>
+	    							<p class="meta d-flex"><span class="pr-3">Dessert</span><span class="ml-auto pl-3">June 05, 2020</span></p>
 	    							<h3><a href="#">Tasty &amp; Delicious Foods</a></h3>
 	    							<p class="mb-0"><a href="single.html" class="btn btn-black py-2">Read More <span class="icon-arrow_forward ml-4"></span></a></p>
 	    						</div>
@@ -434,7 +434,7 @@
             	<h2 class="ftco-heading-2">Have a Questions?</h2>
             	<div class="block-23 mb-3">
 	              <ul>
-	                <li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
+	                <li><span class="icon icon-map-marker"></span><span class="text">203 St. Mountain View, Istanbul, Turkey</span></li>
 	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+2 392 3929 210</span></a></li>
 	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">info@yourdomain.com</span></a></li>
 	              </ul>
@@ -446,7 +446,7 @@
           <div class="col-md-12 text-center">
 
             <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | <i class="icon-heart color-danger" aria-hidden="true"></i><a href="https://colorlib.com" target="_blank"> Stories </a>
+  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | <i class="icon-heart color-danger" aria-hidden="true"></i><a href="https://eksi42.github.io/" target="_blank"> Stories </a>
   <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
           </div>
         </div>
